# Smart-E-Commerce-Inventory-Engine

./: .gitignore  CMakeLists.txt  README.md  main.cpp  mymodule.cpp  smart_inventory.py
src/: Smart_Inventory_Engine_module.cpp  main.cpp
test/: test_smart_inventory.py
